--- a/Sparc2/Sparc2/Sparc.Store.csproj
+++ b/Sparc2/Sparc2/Sparc.Store.csproj
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Bogus" Version="35.6.3" />
+		<PackageReference Include="Markdig" Version="0.41.3" />
 		<PackageReference Include="Stripe.net" Version="48.2.0" />
 
 	</ItemGroup>
