--- a/Sparc2/Sparc2/compilerconfig.json
+++ b/Sparc2/Sparc2/compilerconfig.json
@@ -47,18 +47,18 @@
     "outputFile": "Donations/AddDonation.razor.css",
     "inputFile": "Donations/AddDonation.razor.scss"
   },
-  {
-    "outputFile": "Catalog/AddProduct.razor.css",
-    "inputFile": "Catalog/AddProduct.razor.scss"
-  },
+  //{
+  //  "outputFile": "Catalog/AddProduct.razor.css",
+  //  "inputFile": "Catalog/AddProduct.razor.scss"
+  //},
   {
     "outputFile": "Shared/Components/Breadcrumbs.razor.css",
     "inputFile": "Shared/Components/Breadcrumbs.razor.scss"
   },
-  {
-    "outputFile": "Catalog/TovikReferral.razor.css",
-    "inputFile": "Catalog/TovikReferral.razor.scss"
-  },
+  //{
+  //  "outputFile": "Catalog/TovikReferral.razor.css",
+  //  "inputFile": "Catalog/TovikReferral.razor.scss"
+  //},
   {
     "outputFile": "Shared/Components/FaqItem.razor.css",
     "inputFile": "Shared/Components/FaqItem.razor.scss"
