Dynamic Sparc Engine and Tovik URLs depending on environment

--- a/Sparc2/Sparc2/appsettings.json
+++ b/Sparc2/Sparc2/appsettings.json
@@ -10,5 +10,7 @@
     "Storage": "",
     "Stripe": "",
     "ExchangeRates": ""
-  }
+  },
+  "SparcEngine": "https://engine.sparc.coop",
+  "Tovik": "https://tovik.app"
 }
